--- a/about.html
+++ b/about.html
@@ -96,9 +96,8 @@
           </div><!-- End Gallery Item -->
           <div class="col-lg-5 content">
             <h2>NakoYami Blaze</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="fst-italic py-3">Nakoyami Blaze heree~<br> 
+im a shota furry artist, hope you love my art~
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -111,14 +110,14 @@
                 </ul>
               </div>
             </div>
-            <p class="py-3">
+           <!-- <p class="py-3">
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
             </p>
             <p class="m-0">
               Recusandae est praesentium consequatur eos voluptatem. Vitae dolores aliquam itaque odio nihil. Neque ut neque ut quae voluptas. Maxime corporis aut ut ipsum consequatur. Repudiandae sunt sequi minus qui et. Doloribus molestiae officiis.
               Soluta eligendi fugiat omnis enim. Numquam alias sint possimus eveniet ad. Ratione in earum eum magni totam.
-            </p>
+            </p>-->
           </div>
         </div>
 
