--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: PhotoFolio - v1.1.1
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body>
@@ -54,8 +49,7 @@
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+
        <i class="bi bi-paint-bucket"></i>
         <h2><strong>Blaze Art's</strong></h2>
       </a>
@@ -110,7 +104,7 @@
               <i class="bi bi-brush flex-shrink-0"></i>
               <div>
                 <h4>Pixiv:</h4>
-                <strong><p><a href="https://www.pixiv.net/users/86809287</">ItzBlazeeID</a></p></strong>
+                <strong><p><a href="https://www.pixiv.net/en/users/86809287</">ItzBlazeeID</a></p></strong>
               </div>
             </div>
           </div><!-- End Info Item -->
