--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
 <meta property="og:image" content="assets/img/gallery/gallery-13.png">
-<meta property="og:url" content="https://blaze.my.id/about">
+<meta property="og:url" content="https://bwzee.my.id/about">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
@@ -96,28 +96,28 @@
           </div><!-- End Gallery Item -->
           <div class="col-lg-5 content">
             <h2>NakoYami Blaze</h2>
-            <p class="fst-italic py-3">Nakoyami Blaze heree~<br> 
+            <p class="fst-italic py-3">Hi Nakoyami Blaze heree~ :3<br> 
 im a shota furry artist, hope you love my art~
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 Oct 2009</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>blaze.my.id</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>admin@blaze.my.id</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Author Birthday:</strong> <span>17 Oct 2009</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>bwzee.my.id</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>admin@bwzee.my.id</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>13</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
-           <!-- <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-            <p class="m-0">
-              Recusandae est praesentium consequatur eos voluptatem. Vitae dolores aliquam itaque odio nihil. Neque ut neque ut quae voluptas. Maxime corporis aut ut ipsum consequatur. Repudiandae sunt sequi minus qui et. Doloribus molestiae officiis.
-              Soluta eligendi fugiat omnis enim. Numquam alias sint possimus eveniet ad. Ratione in earum eum magni totam.
-            </p>-->
+           <p class="py-3">
+
+my species is a white wolf, and im 12 y.o :3<br>
+i have a red line in my neck!<br>
+this is a sign of my family :3, cool isn't it?<br>
+and my tail can emit a fire!<br>
+oh yeah! I have 2 different eye colors, its purple and red!</p>
+           </p> 
           </div>
         </div>
 
