--- a/about.html
+++ b/about.html
@@ -102,21 +102,26 @@ im a shota furry artist, hope you love my art~
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Author Birthday:</strong> <span>17 Oct 2009</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday Author:</strong> <span>17 Oct 2009</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>bwzee.my.id</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>admin@bwzee.my.id</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>13</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age Author:</strong> <span>13</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
-           <p class="py-3">
+            <h2>Blaze Info</h2>
+           <p class="fst-italic py-3">my species is a white wolf, and im 12 y.o :3<br>
 
-my species is a white wolf, and im 12 y.o :3<br>
 i have a red line in my neck!<br>
+
 this is a sign of my family :3, cool isn't it?<br>
+
 and my tail can emit a fire!<br>
+
 oh yeah! I have 2 different eye colors, its purple and red!</p>
+
+
            </p> 
           </div>
         </div>
