--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
 <meta property="og:image" content="assets/img/gallery/gallery-13.png">
-<meta property="og:url" content="https://blaze.my.id/">
+<meta property="og:url" content="https://bwzee.my.id/">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
@@ -44,18 +44,18 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="/" class="logo d-flex align-items-center  me-auto me-lg-0">
          <i class="bi bi-palette"></i>
         <h2><strong>Blaze Art's</strong></h2>
       </a>
       
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="arts.html">All Art's</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/" class="active">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/arts">All Art's</a></li>
+          <li><a href="/services">Services</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
