--- a/arts.html
+++ b/arts.html
@@ -17,7 +17,7 @@
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
 <meta property="og:image" content="assets/img/gallery/gallery-13.png">
-<meta property="og:url" content="https://blaze.my.id/arts">
+<meta property="og:url" content="https://bwzee.my.id/arts">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
@@ -48,18 +48,18 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-     <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+     <a href="/" class="logo d-flex align-items-center  me-auto me-lg-0">
          <i class="bi bi-palette"></i>
         <h2><strong>Blaze Art's</strong></h2>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="arts.html" class="active">All Art's</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/arts" class="active">All Art's</a></li>
+          <li><a href="/services">Services</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
