--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
 <meta property="og:image" content="assets/img/gallery/gallery-13.png">
-<meta property="og:url" content="https://blaze.my.id/contact">
+<meta property="og:url" content="https://bwzee.my.id/contact">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
@@ -48,7 +48,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="/" class="logo d-flex align-items-center  me-auto me-lg-0">
 
        <i class="bi bi-paint-bucket"></i>
         <h2><strong>Blaze Art's</strong></h2>
@@ -56,11 +56,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="arts.html">All Art's</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/arts">All Art's</a></li>
+          <li><a href="/services">Services</a></li>
+          <li><a href="/contact" class="active">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -94,7 +94,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <strong><p><a href="mailto:admin@blaze.my.id">admin@blaze.my.id</a></p></strong>
+                <strong><p><a href="mailto:admin@bwzee.my.id">admin@bwzee.my.id</a></p></strong>
               </div>
             </div>
           </div><!-- End Info Item -->
