--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2>I'm <span>NakoYami Blaze</span></h2>
           <h2>A Furry Artist</h2>
           <p>Heyaa Nice To Meet You.</p>
-          <a href="contact.html" class="btn-get-started">Contact Me</a>
+          <a href="/contact" class="btn-get-started">Contact Me</a>
         </div>
       </div>
     </div>
