--- a/services.html
+++ b/services.html
@@ -41,12 +41,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: PhotoFolio - v1.1.1
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body>
@@ -55,18 +50,18 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-          <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="/" class="logo d-flex align-items-center  me-auto me-lg-0">
          <i class="bi bi-palette"></i>
         <h2><strong>Blaze Art's</strong></h2>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-         <li><a href="arts.html">All Art's</a></li>
-          <li><a href="services.html" class="active">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+         <li><a href="/arts">All Art's</a></li>
+          <li><a href="/services" class="active">Services</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -85,7 +80,7 @@
             <h2>Services</h2>
             <p>Imma Still Opening Commission!.</p>
 
-            <a class="cta-btn" href="contact.html">Contact Me</a>
+            <a class="cta-btn" href="/contact">Contact Me</a>
           </div>
         </div>
       </div>
