--- a/services.html
+++ b/services.html
@@ -18,13 +18,14 @@
 <meta name="author" content="Rizzy Fuzz">
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
-<meta property="og:image" content="assets/img/gallery/gallery-13.png">
+<meta property="og:image" content="https://blaze.my.id/assets/img/gallery/gallery-14.png">
 <meta property="og:url" content="https://blaze.my.id/service">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
-  <link href="assets/img/favicon.png" rel="icon" sizes="32x32">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <!-- Favicons -->
+  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
+  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="icon" sizes="32x32">
+  <link href="https://bwzee.my.id/assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
