--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
 <meta name="author" content="Rizzy Fuzz">
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
-<meta property="og:image" content="assets/img/gallery/gallery-13.png">
+<meta property="og:image" content="https://bwzee.my.id/assets/img/gallery/gallery-14.png">
 <meta property="og:url" content="https://bwzee.my.id/about">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
-  <link href="assets/img/favicon.png" rel="icon" sizes="32x32">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
+  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="icon" sizes="32x32">
+  <link href="https://bwzee.my.id/assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
