--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   <!-- Favicons -->
 
-  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="shortcut icon" sizes="180x180">
+  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="shortcut icon">
 
-  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="icon" sizes="32x32">
+  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="icon">
 
-  <link href="https://bwzee.my.id/assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="https://bwzee.my.id/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   
   <!-- Google Fonts -->
