--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <meta name="author" content="Rizzy Fuzz">
 <meta property="og:title" content="Blaze Art's Collection">
 <meta property="og:description" content="Website to publish blaze art collection">
-<meta property="og:image" content="https://bwzee.my.id/assets/img/gallery/gallery-14.png">
+<meta property="og:image" content="https://file.rizfurr.ml/file/hRvvMoqNROXqsczVKzka.png">
 <meta property="og:url" content="https://bwzee.my.id/">
 
   <!-- Favicons -->
 
   
-  <link href="https://bwzee.my.id/assets/img/favicon.png" rel="icon">
+  <link href="https://file.rizfurr.ml/file/hRvvMoqNROXqsczVKzka.png" rel="icon">
 
-  <link href="https://bwzee.my.id/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://file.rizfurr.ml/file/hRvvMoqNROXqsczVKzka.png" rel="apple-touch-icon">
 
   
   <!-- Google Fonts -->
