--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <meta name="description" content="Website to publish blaze art collection">
 <meta name="keywords" content="website,art collection">
 <meta name="robots" content="index, follow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta httpEquiv="Content-Type" content="text/html;charset=UTF-8" />
+<meta httpEquiv="X-UA-Compatible" content="ie=edge" />
+<meta httpEquiv="X-UA-Compatible" content="IE=7" />
 <meta name="language" content="English">
 <meta name="revisit-after" content="30 days">
 <meta name="author" content="Rizzy Fuzz">
